# SpiNNUtils

./: .coveragerc  .gitignore  .mypy.ini  .pylint_dict.txt  .pylintrc  .ratexclude  .ratexcludes  .travis.yml  CITATION.cff  LICENSE_POLICY.md  License.md  MANIFEST.in  README.md  mypy.bash  mypyd.bash  pylint.bash  pypi_to_import  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: data.yml  python-package.yml  python_actions.yml
doc/: Makefile  make.bat  unfiltered-files.txt
doc/source/: .gitignore  conf.py  index.rst
spinn_utilities/: __init__.py  _version.py  abstract_base.py  abstract_context_manager.py  ast_type_checker.py  bacon.txt  bytestring_utils.py  camel_case_config_parser.py  case_sensitive_parser.py  check.py  classproperty.py  compare.py  conf_loader.py  config_holder.py  config_setup.py  default_ordered_dict.py  exceptions.py  executable_finder.py  find_max_success.py  foobar.py  hashing_ordered_set.py  helpful_functions.py  index_is_value.py  log.py  log_store.py  logger_utils.py  no_config_found_exception.py  numpy_vs_mypy.py  ordered_default_dict.py  ordered_set.py  overrides.py  package_loader.py  ping.py  progress_bar.py  progress_bar.txt  require_subclass.py  safe_eval.py  see.py  set_list.py  socket_address.py  (+6 more)
spinn_utilities/citation/: __init__.py  citation_aggregator.py  citation_and_doi_updater.py  citation_updater_and_doi_generator.py  generate_aggregate.py  tool_citation_generation.py
spinn_utilities/configs/: __init__.py  camel_case_config_parser.py  case_sensitive_parser.py  config_checker.py  config_documentor.py  config_template_exception.py  no_config_found_exception.py  notes.md  two_user_configs_exception.py  unexpected_config_exception.py
spinn_utilities/data/: __init__.py  data_status.py  reset_status.py  run_status.py  utils_data_view.py  utils_data_writer.py
spinn_utilities/lazy/: README.md  abstract_dict.py  abstract_view.py  ids_view.py  list_iterator.py  list_iterator1.py  multiple_values_exception.py  range_dictionary.py  range_view.py  ranged_list.py  single_view.py  slice_view.py  test.py
spinn_utilities/lazy_range_dictionary/: lazy_list.py  list_iterator.py
spinn_utilities/make_tools/: .gitignore  __init__.py  check_database_keys.py  converter.py  convertor.py  db.sql  file_converter.py  file_convertor.py  log_id_mapper.py  log_sqllite_database.py  make_utils.py  number_mapper.py  replacer.py
spinn_utilities/matrix/: __init__.py  _types.py  abstract_matrix.py  demo_matrix.py  double_dict.py  x_view.py  y_view.py
spinn_utilities/ranged/: README.md  __init__.py  abstract_dict.py  abstract_list.py  abstract_sized.py  abstract_view.py  div_list.py  div_view.py  dual_list.py  ids_view.py  list_iterator.py  multiple_values_exception.py  range_dictionary.py  ranged_list.py  ranged_list_of_lists.py  single_list.py  single_view.py  slice_view.py  test.py
spinn_utilities/testing/: README.md  docs_checker.py  log_checker.py
spinn_utilities/typing/: __init__.py  coords.py  json.py
unittests/: config_four.cfg  config_two.cfg  config_two.cfg.template  config_types.cfg  config_types.cfg.template  configloader.cfg  import_all_test.py  test_ast_type_checker.py  test_bytestring_utils.py  test_cfg_checker.py  test_class_property.py  test_conf_loader.py  test_configs.py  test_context_manager.py  test_default_ordered_dict.py  test_doc_checker.py  test_exec_finder.py  test_helpful_functions.py  test_index_is_value.py  test_log.py  test_log_checker.py  test_logger_utils.py  test_ordered_default_dict.py  test_ordered_set.py  test_overrides.py  test_ping.py  test_progress_bar.py  test_require_subclass.py  test_safe_eval.py  test_search_for_max_success.py  test_see.py  test_set_list.py  test_socket_address.py  test_timer.py  test_unigue_list.py
unittests/abstract_base/: __init__.py  abc_abstract.py  abc_mixed_parent.py  abc_none_mixed_parent.py  abstract_grandparent.py  abstract_has_constraints.py  abstract_has_id.py  abstract_has_label.py  abstract_no_base_marker.py  abstract_parent.py  checked_bad_param.py  grandparent.py  mixed_parent.py  no_base_user.py  no_label.py  test_abstract_base.py  unchecked_bad_param.py
unittests/citation/: test_citation.py
unittests/citation/c_module/: CITATION.cff
unittests/citation/package_1_folder/: CITATION.cff  __init__.py  c_requirements.txt  pypi_to_import  requirements.txt
unittests/citation/package_2_folder/: CITATION.cff
unittests/data/: __init__.py  test_utils_data.py
unittests/lazy/: ids_test.py  range_test.py  single_test.py  slice_test.py  test_list.py  test_views_ids.py  whole_test.py
unittests/make_tools/: .gitignore  formats.c1  formats.c2  old.sqlite3  replacer.sqlite3  spec.dict  temp.sqlite3  test.dict  test_convert.py  test_database.py  test_database_keys.py  test_file_convert.py  test_log_database.py  test_number_mapper.py  test_replacer.py
unittests/matrix/: test_double.py  test_matrix.py
unittests/ranged/: div_test.py  dual_test.py  ids_test.py  single_list_test.py  single_over_none_list_test.py  single_test.py  single_view_test.py  slice_test.py  test_list.py  test_non_ranged_list.py  test_numpy.py  test_ranged_list_of_lists.py  test_views_ids.py  whole_test.py
unittests/replacer/: messages9000.csv  test_replacer.py
(+25 files in other folders)
