# Copyright (c) 2025 SpiNNcloud
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SpiNNUtilities2"
version = "2!0.1.1b"
description = "Utility classes and functions for SpiNNaker projects"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache-2.0" }
authors = [
    { name = "SpiNNakerTeam", email = "spinnakerusers@googlegroups.com" },
    { name = "SpiNNcloud", email = "info@spinncloud.com" }
]
requires-python = ">=3.8, <4"
dependencies = [
    "appdirs",
    "numpy",
    "pyyaml",
    "requests",
    "typing-extensions"
]
keywords = ["spinnaker", "utilities"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://gitlab.com/spinnaker2/SpiNNUtils2"

[project.optional-dependencies]
test = [
    "pytest-cov",
    "testfixtures",
    "httpretty != 1.0.0",
    "types-appdirs",
    "types-requests"
]

[tool.setuptools]
zip-safe = true
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
include = ["spinn_utilities", "spinn_utilities.*"]

[tool.setuptools.package-data]
"*" = [
    "spinn_utilities.cfg",
    "progress_bar.txt",
    "db.sql",
    "py.typed"
]

[tool.setuptools.dynamic]
version = { attr = "spinn_utilities._version.__version__" }