# Copyright (c) 2023 The University of Manchester
# Copyright (c) 2025 SpiNNcloud
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# based on https://gitlab.com/spinnaker2/SpiNNUtils2/-/blob/main/pyproject.toml

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SpiNNUtilities"
version = "1!7.4.2"
description = "Utility classes and functions for SpiNNaker projects"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache-2.0" }
authors = [
    { name = "SpiNNakerTeam", email = "spinnakerusers@googlegroups.com" },
    { name = "SpiNNcloud", email = "info@spinncloud.com" }
]
requires-python = ">=3.10, <4"
dependencies = [
    "appdirs",
    "docstring_parser",
    "numpy",
    "pyyaml",
    "requests",
    "typing-extensions"
]
keywords = ["spinnaker", "utilities"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
[project.urls]
Codebase = "https://github.com/SpiNNakerManchester/SpiNNUtils"
Spin2_code = "https://gitlab.com/spinnaker2/SpiNNUtils2"

[project.optional-dependencies]
test = [
    "pytest-cov",
    "testfixtures",
    "httpretty != 1.0.0",
    "types-appdirs",
    "types-requests",
    "types-PyYAML"
]

[tool.setuptools]
zip-safe = true
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
include = ["spinn_utilities", "spinn_utilities.*"]

[tool.setuptools.package-data]
"*" = [
    "spinn_utilities.cfg",
    "db.sql",
    "notes.md",
    "py.typed"
]

[[tool.mypy.overrides]]
module = ["testfixtures","httpretty"]
ignore_missing_imports = truenewline at end
